fixing header on IOS

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -109,7 +109,7 @@ svg {
 }
 
 .menu-lock {
-    overflow: hidden;
+    overflow: auto;
     touch-action: none;
     -ms-touch-action: none;
     -webkit-appearance: none;
